cmd/internal/generator/testdata/error/global_error_constructor/v_out.go
// Code generated by "github.com/frk/valid". DO NOT EDIT.

package testdata

import (
	"github.com/frk/valid/cmd/internal/generator/testdata/mypkg"
)

func (v *Validator) Validate() error {
	if v.F1 == "" {
		return mypkg.NewError("F1", v.F1, "required")
	}
	if len(v.F2) == 0 {
		return mypkg.NewError("F2", v.F2, "required")
	} else if len(v.F2) > 9 {
		return mypkg.NewError("F2", v.F2, "len", "", 9)
	}
	return nil
}
